# autodrive_sim

./: README.md  code.txt  칼만필터 없을때 잘가는 코드.txt
install/: local_setup.sh  setup.sh
install/auto_drive/lib/auto_drive/: auto_drive
install/auto_drive/share/auto_drive/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/midterm_env/lib/midterm_env/: env
install/midterm_env/share/midterm_env/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/midterm_msgs/include/midterm_msgs/msg/: control.h  control.hpp  goal.h  goal.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  simple_gps.h  simple_gps.hpp  simple_lidar.h  simple_lidar.hpp  wall.h  wall.hpp  wall_list.h  wall_list.hpp
install/midterm_msgs/share/midterm_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/midterm_msgs/share/midterm_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  midterm_msgsConfig-version.cmake  (+11 more)
log/: latest_build
src/auto_drive/: package.xml  setup.cfg  setup.py
src/midterm_env/: package.xml  setup.cfg  setup.py
src/midterm_env/midterm_env/: env.py  obstacle.txt  wall.txt
src/midterm_msgs/: CMakeLists.txt
src/midterm_msgs/msg/: Control.msg
(+86 files in other folders)
