<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auto_drive</name>
  <version>0.0.1</version>
  <description>Autonomous driving control package for a toy environment</description>

  <maintainer email="gyumin@example.com">gyumin</maintainer>
  <license>MIT</license>

  <depend>midterm_msgs</depend>  
  <depend>rclpy</depend>
  <depend>setuptools</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

